<?xml version="1.0"?>
<!--
 Copyright (c) Microsoft Corporation. All rights reserved.
 Licensed under the MIT License.
 -->
<package format="2">
  <name>ros2_action_test</name>
  <version>0.9.0</version>
  <description>This is a litmus test node for the ROS2 GitHub Action.</description>
  <maintainer email="riotsquad@microsoft.com">Amel Hassan</maintainer>
  <author email="riotsquad@microsoft.com">Amel Hassan</author>
  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/azure_kinect_ros_driver</url> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
